# src/server.ts
@@ -1,6 +1,7 @@
 import express from "express";
 import categoryRoutes from "./components/category/routes/categoryRoutes";
 import productRoutes from "./components/product/routes/productRoutes";
+import authRoutes from "./components/auth/routes/authRoutes";
 
 const app = express();
 
@@ -9,5 +10,6 @@ app.use(express.urlencoded({ extended: true }));
 
 app.use("/api/categories", categoryRoutes);
 app.use("/api/products", productRoutes);
+app.use("/api/auth", authRoutes);
 
 export default app;
